css/style.css
/* ... */
.row > * {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 100%;
  max-width: 100%;
  padding-right: calc(var(--bs-gutter-x) / 2);
  padding-left: calc(var(--bs-gutter-x) / 2);
  margin-top: var(--bs-gutter-y);
}

body {
  font-family: Inter, normal;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 24px;
  position: relative;
  overflow: hidden;
  color: #c8c8c8;
}

i {
  width: 25px;
  height: 25px;
  position: absolute;
  -webkit-mask-size: contain;
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-position: center;
  background-color: #666;
}

.mask-reset {
  -webkit-mask-size: unset;
  -webkit-mask-repeat: unset;
  -webkit-mask-position: unset;
  background-color: unset;
}

.icon {
  display: inline-block;
  width: 1em;
  height: 1em;
}

html,
body {
  padding: 0;
  margin: 0;
  overflow-x: hidden;
  scroll-behavior: smooth;
}

.clearfix:after {
  visibility: hidden;
  display: block;
  content: "";
  clear: both;
  height: 0;
}

a,
a:hover {
  text-decoration: none;
  color: unset;
}

ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

a:active,
a:focus {
  outline: none;
}

input,
textarea {
  outline: none;
}

input:active,
textarea:active {
  outline: none;
}

:focus {
  outline: none;
}

textarea {
  resize: none;
}

textarea {
  resize: vertical;
}

textarea {
  resize: horizontal;
}

button {
  padding: 0;
  border: none;
  color: inherit;
  background-color: transparent;
  cursor: pointer;
}

.btn:not(:disabled):not(.disabled) {
  cursor: pointer;
}

.breadcrumbs {
  font-size: 0.875em;
  line-height: 114.2857142857%;
  font-weight: 500;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  line-height: 25px;
}

.breadcrumbs__item {
  position: relative;
  margin-left: 15px;
  text-transform: uppercase;
}

.breadcrumbs__item:first-child {
  margin-left: 0px;
  color: #c4364e;
}

body.lock {
  height: 100vh;
  overflow: hidden;
}

.popup {
  position: fixed;
  width: 100%;
  z-index: 1500;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.8);
  top: 0;
  left: 0;
  opacity: 0;
  visibility: hidden;
  overflow-y: auto;
  -webkit-transition: all 0.8s ease 0s;
  -o-transition: all 0.8s ease 0s;
  transition: all 0.8s ease 0s;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

.popup.open {
  opacity: 1;
  visibility: visible;
  overflow-y: auto;
}

.popup.open .popup__content {
  -webkit-transform: perspective(600px) translate(0, 0) rotateX(0);
  transform: perspective(600px) translate(0, 0) rotateX(0);
  opacity: 1;
  background: #2b2b2b;
  border: 1px solid rgba(255, 255, 255, 0.11);
  -webkit-box-shadow: 0px 29px 130px rgba(0, 0, 0, 0.19);
  box-shadow: 0px 29px 130px rgba(0, 0, 0, 0.19);
  border-radius: 20px;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

.popup__body {
  min-height: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 30px 10px;
  overflow: auto;
  position: relative;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

.popup__content {
  -webkit-transition: all 0.8s ease 0s;
  -o-transition: all 0.8s ease 0s;
  transition: all 0.8s ease 0s;
  opacity: 0;
  -webkit-transform: perspective(600px) translate(0, -100%) rotateX(45deg);
  transform: perspective(600px) translate(0, -100%) rotateX(45deg);
  overflow: auto;
}

.popup__close {
  position: absolute;
  right: 10px;
  top: 10px;
}

.accordion {
  cursor: pointer;
  font-family: Inter, normal;
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s;
  position: relative;
  background: #212121;
  padding: 16px 20px;
  font-size: 1em;
  line-height: 118.75%;
  font-weight: 500;
  color: #fff;
  border-radius: 6px;
  width: 100%;
  text-align: left;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.accordion:last-child {
  margin-bottom: 0;
}

.accordion_active {
  border-radius: 6px 6px 0px 0px;
}

.accordion_active .accordion-icon {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.accordion span {
  margin-right: 20px;
}

.panel {
  max-height: 0;
  overflow: hidden;
  -webkit-transition: max-height 0.3s ease-out;
  -o-transition: max-height 0.3s ease-out;
  transition: max-height 0.3s ease-out;
  background: #1c1c1c;
  border-radius: 0px 0px 6px 6px;
}

.panel:last-child {
  margin-bottom: 0;
}

.accordion-icon {
  -webkit-transition: 0.3s;
  -o-transition: 0.3s;
  transition: 0.3s;
  width: 20px;
  height: 20px;
  fill: #404040;
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.tabs__nav {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  list-style-type: none;
  background: #262525;
  padding: 8px 16px;
  margin: 0;
  border-radius: 5px;
}

.tabs__link {
  font-size: 0.875em;
  line-height: 121.4285714286%;
  font-weight: 500;
  text-decoration: none;
  text-align: center;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 15px;
  color: #575757;
  -webkit-transition: 0.3s;
  -o-transition: 0.3s;
  transition: 0.3s;
}

.tabs__link:last-child {
  margin-right: 0;
}

.tabs__link_active {
  color: #c8c8c8;
  cursor: default;
}

.tabs__content {
  height: 100%;
}

.tabs__pane {
  display: none;
  height: 100%;
}

.tabs__pane_show {
  display: block;
}

body {
  background-color: #1e1e1e;
  height: 100%;
  overflow-x: hidden;
  overflow-y: auto;
}

body::-webkit-scrollbar {
  width: 4px;
}
/* ... */

